# quell

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  biome.json  frisk-report.html  friskit-report.html  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vercel.json
.claude/: launch.json  settings.local.json
.github/workflows/: build-binaries.yml  ci.yml  release.yml
dashboard/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/incident/: page.tsx
dashboard/app/replay/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/stats/: page.tsx
dashboard/components/: EmptyState.tsx  ErrorCard.tsx  IncidentTable.tsx  Nav.tsx  ReplayTimeline.tsx  SeverityBadge.tsx  StatusPill.tsx
dashboard/lib/: api.ts  utils.ts
docs/: LAUNCH.md  README.md  RELEASE.md  architecture.md  cli-design.md  commands.md  configuration.md  extending.md  getting-started.md  installation.md  migrating-to-0.3.md  troubleshooting.md
docs/media/: README.md  architecture.excalidraw
examples/: preview_visuals.py
fixtures/vulnerable-app/: next.config.js  package.json
fixtures/vulnerable-app/sql/: schema.sql
fixtures/vulnerable-app/src/: auth.js  db.js  nosql.js  server.js
fixtures/vulnerable_app/: checkout.py
landing/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: AnimatedGrid.tsx  Architecture.tsx  CTA.tsx  ExtensionErrorFilter.tsx  Features.tsx  Footer.tsx  GridDistortion.tsx  Hero.tsx  HowItWorks.tsx  InstallTabs.tsx  Navbar.tsx  SectionHeader.tsx  SkillsShowcase.tsx  SplineScene.tsx  TerminalDemo.tsx  TerminalShowcase.tsx  TextScramble.tsx
landing/lib/: constants.ts  gsap.ts
landing/scripts/: generate-og.mjs  generate-skill-mocks.mjs
packaging/: README.md
packaging/homebrew/: quell.rb
packaging/npm/: README.md  package.json
packaging/npm/scripts/: download.js
packaging/pyinstaller/: quell.spec
quell/: __init__.py  __main__.py  version.py  watch.py
quell/agents/: __init__.py  base_agent.py  graph.py  graph_tools.py  messages.py  state.py  subagent.py  types.py
quell/agents/incident_commander/: __init__.py  commander.py  system_prompt.jinja
quell/config/: __init__.py  loader.py  paths.py  schema.py
quell/dashboard/: __init__.py  launcher.py  server.py
quell/dashboard/api/: __init__.py  events.py  incidents.py  replay.py  stats.py
quell/detector/: __init__.py  baseline.py  detector.py  signature.py
quell/interface/: __init__.py  cli.py  cli_helpers.py  config_cmd.py  config_handlers.py  config_helpers.py  config_schemas.py  doctor.py  errors.py  explain.py  format.py  help_json.py  history.py  incident_cmd.py  incident_handlers.py  incident_schemas.py  main.py  notifier_cmd.py  notifier_handlers.py  notifier_schemas.py  notifier_test.py  output.py  output_schemas.py  progress.py  prompts.py  replay.py  skill_cmd.py  skill_handlers.py  spinner.py  visuals.py  wizard.py  wizard_noninteractive.py
quell/llm/: __init__.py  compression.py  cost.py  llm.py  parser.py  types.py
quell/memory/: __init__.py  agent_runs.py  db.py  events.py  findings.py  incidents.py  models.py  stats.py
quell/monitors/: __init__.py  base.py  http_poll.py  local_file.py  sentry.py  vercel.py
quell/notifiers/: __init__.py  base.py  discord.py  formatting.py  slack.py  telegram.py
quell/replay/: __init__.py  renderer.py
quell/runtime/: __init__.py  docker_runtime.py  errors.py  runtime.py  sandbox_info.py
quell/skills/: __init__.py  loader.py  model.py  selector.py
quell/skills/frameworks/: django.md  express.md  fastapi.md  flask.md  nextjs-app-router.md  rails.md  spring-boot.md
quell/skills/incidents/: database-deadlock.md  disk-full.md  dns-resolution-failure.md  memory-leak.md  openai-rate-limit.md  (+3 more)
quell/tool_server/: __init__.py  auth.py  context.py  server.py
quell/tools/: __init__.py  arguments.py  builtins.py  executor.py  formatting.py  registry.py  result.py
quell/utils/: __init__.py  errors.py  keyring_utils.py  logger.py  shell.py  timeparse.py  toml_writer.py
scripts/: check_versions.py  gen_commands_md.py  install.sh  render_homebrew_formula.py
site/: package-lock.json  package.json  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
site/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Install.tsx  Navbar.tsx  Stats.tsx  Terminal.tsx
src/: cli.ts  errors.ts  index.ts  score.ts  types.ts
src/report/: html.ts  json.ts  template-layout.ts  template-sections.ts  template-styles.ts
src/scanners/: gitleaks.ts  index.ts  semgrep.ts
src/utils/: ast.ts  git.ts  tool-check.ts  walk.ts
tests/: conftest.py  smoke.test.ts
tests/e2e/: __init__.py  test_full_incident_flow.py
tests/rules/: ai-no-ratelimit.test.ts  cors-wildcard.test.ts  env-in-git.test.ts  eval-usage.test.ts  helpers.ts  insecure-cookies.test.ts  nosql-injection.test.ts  open-redirect.test.ts  plaintext-passwords.test.ts  public-secret-env.test.ts  supabase-no-rls.test.ts  unprotected-admin.test.ts  unsafe-html.test.ts  weak-jwt.test.ts
tests/unit/: test_agent_graph.py  test_agent_loop.py  test_agent_state.py  test_builtin_tools.py  test_cli_config.py  test_cli_errors.py  test_cli_explain.py  test_cli_help_json.py  test_cli_history.py  test_cli_incident.py  test_cli_notifier.py  test_cli_root.py  test_cli_skill.py  test_config.py  test_cost.py  test_dashboard.py  test_detector.py  test_doctor.py  test_format.py  test_gen_commands_md.py  test_init_noninteractive.py  test_llm.py  test_llm_parser.py  test_memory.py  test_memory_persistence.py  test_monitors.py  test_monitors_remote.py  test_notifiers.py  test_output.py  test_progress.py  test_prompts.py  test_replay.py  test_runtime.py  test_skills.py  test_smoke.py  test_spinner.py  test_timeparse.py  test_toml_writer.py  test_tool_server.py  test_tools.py  (+3 more)
(+41 files in other folders)
