[tool.poetry]
name = "quell-agent"
version = "0.1.0"
description = "Your production's autonomous on-call."
authors = ["Anshul Bhartiya"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/quellhq/quell"
repository = "https://github.com/quellhq/quell"
keywords = ["incident-response", "sre", "agents", "autonomous", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "quell"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = ">=0.12"}
loguru = "^0.7"
pydantic = ">=2.0,<3.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0,<3.0"}
aiosqlite = ">=0.17"   # async SQLite driver for SQLAlchemy asyncio
keyring = ">=24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.11"

[tool.poetry.scripts]
quell = "quell.interface.main:app"

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
]
ignore = [
    "ANN101",  # missing type annotation for `self`
    "ANN102",  # missing type annotation for `cls`
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]  # allow assert, skip annotations in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["loguru"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["quell"]
omit = ["quell/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# build
# ---------------------------------------------------------------------------
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
