[tool.poetry]
name = "quell"
version = "0.3.0"
description = "An on-call engineer that never sleeps."
authors = ["Anshul Bhartiya"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/bhartiyaanshul/quell"
repository = "https://github.com/bhartiyaanshul/quell"
keywords = ["incident-response", "sre", "agents", "autonomous", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "quell"}]
include = [
    # Dashboard static export — populated by release.yml before the
    # wheel build.  Gitignored so local dev checkouts stay clean.
    {path = "quell/dashboard/static/**/*", format = ["sdist", "wheel"]},
    # Agent Jinja2 templates.
    {path = "quell/agents/**/*.jinja", format = ["sdist", "wheel"]},
    # Skill markdown runbooks.
    {path = "quell/skills/**/*.md", format = ["sdist", "wheel"]},
]

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = ">=0.12"}
loguru = "^0.7"
pydantic = ">=2.0,<3.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0,<3.0"}
aiosqlite = ">=0.17"   # async SQLite driver for SQLAlchemy asyncio
keyring = ">=24.0"
questionary = ">=2.0"
httpx = ">=0.27"
docker = ">=7.0"
fastapi = ">=0.111"
jinja2 = ">=3.1"
litellm = ">=1.40"
pygithub = ">=2.0"
pyyaml = ">=6.0"
uvicorn = {extras = ["standard"], version = ">=0.30"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
# Ruff's formatter output changes across minor versions.  Pin tightly
# so local + CI produce byte-identical output and poetry.lock-less
# resolves stay stable.
ruff = "~0.15.11"
mypy = "^1.11"

[tool.poetry.scripts]
quell = "quell.interface.main:app"

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
]
ignore = [
    "ANN101",  # missing type annotation for `self`
    "ANN102",  # missing type annotation for `cls`
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]  # allow assert, skip annotations in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["loguru"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["questionary"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jinja2"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docker"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["quell"]
omit = ["quell/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# build
# ---------------------------------------------------------------------------
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
